kubernetes/apps/identity/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://auth.${DOMAIN_7}/-/health/ready/
spec:
  hostnames:
    - "auth.${DOMAIN_7}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-7-subdomain-https
    - name: internal
      namespace: kube-system
      sectionName: domain-7-subdomain-https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
